# covid19-bahia

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg  sesab-noticias.csv
covid19bahia/: pipelines.py  settings.py
covid19bahia/spiders/: sesab_spider.py
