[tool.poetry]
name = "covid19bahia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
scrapy = "^2.0.1"
psycopg2 = "^2.8.4"
gspread = "^3.3.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
